--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "build:main": "bun build src/main/main.ts --outfile dist/main.js --target node --external electron",
     "build:preload": "bun scripts/build-preload.ts",
     "start": "bun run electron .",
-    "dist": "bun run build && electron-builder"
+    "dist": "bun run build && electron-builder",
+    "test": "vitest"
   },
   "dependencies": {
     "clsx": "^2.1.0",
@@ -31,6 +32,8 @@
     "zustand": "^5.0.11"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.2",
     "@types/node": "^20.11.16",
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
@@ -39,10 +42,12 @@
     "concurrently": "^8.2.2",
     "electron": "^28.2.1",
     "electron-builder": "^24.9.1",
+    "jsdom": "^28.0.0",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3",
     "vite": "^5.1.0",
+    "vitest": "^4.0.18",
     "wait-on": "^9.0.3"
   },
   "build": {
